audiotestsrc: fix crash when setting the wave property before having negotiated a format

https://bugzilla.gnome.org/show_bug.cgi?id=661911